<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="zero">0</string>
    <string name="zero.decimal">0.000</string>
    
   	<string name="timestamp">Timestamp</string>
    
    <string name="activity">Activity</string>
    
    <string name="confidence">Confidence</string>
    
    <string name="features">Features</string>
    
    <string name="features.aux">Auxiliary Features</string>
    
    <string name="budget.spent">Budget Spent</string>
    
    <string name="num.acc.frames">Number of accelerometer frames</string>
    
    <string name="app_name">Online Activity Recognition</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_label_collection">LabelCollectionActivity</string>
    
    <string name="button_resume">Resume</string>
    <string name="button_clear_db">Clear Database</string>
    <string name="button_interactive">Make Interactive \n(Currently Not Interactive)</string>
    
    <string name="activity_query">What were you just doing?</string>
    <string name="activity_still">Being Still</string>
    <string name="activity_walking">Walking</string>
    <string name="activity_running">Running</string>
    <string name="activity_discard">Discard</string>
</resources>