<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OnlineMonitorActivity" 
    android:background="@color/black" >
    
    <Button 
        android:id="@+id/bell"
        android:text="Bell ON"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textStyle="bold"
        android:background="@color/blue"
        android:textColor="@color/white" />
    
    <LinearLayout 
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:background="#CCCCCC"
        android:orientation="horizontal"
        android:gravity="center" >
        <TextView 
            android:id="@+id/t"
            android:text="@string/timestamp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/predictedActivity"
            android:text="@string/activity"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/black" />           
		<TextView
            android:id="@+id/confidence"
            android:text="@string/confidence"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/black" />
    </LinearLayout>
     
    <LinearLayout 
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:background="#CCCCCC"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">
        <TextView 
            android:id="@+id/numFrames"
            android:text="@string/num.acc.frames"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
        	android:gravity="center"
            android:textColor="@color/black" />
    </LinearLayout>
    
    <TextView
        android:id="@+id/budgetSpent"
        android:background="#CCCCCC"
        android:text="@string/budget.spent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/black" />
     
    <LinearLayout 
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="4"
        android:orientation="horizontal"
        android:background="@color/black"
        android:padding="10dp" >
        
        <Button android:text="@string/button_resume" 
            android:layout_height="match_parent"
            android:layout_width="0dp" 
            android:layout_weight="1"
            android:id="@+id/pauseResume"
            android:background="@color/green"
            android:textColor="@color/black" />
        <!-- 
        <Button android:text="@string/button_clear_db" 
            android:layout_height="match_parent"
            android:layout_width="0dp" 
            android:layout_weight="1"
            android:id="@+id/clearDatabase"
            android:background="@color/red"
            android:textColor="@color/black" /> -->        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="4"
        android:orientation="horizontal"
        android:background="@color/black"
        android:padding="10dp"
        android:paddingTop="0dp" >
        
        <Button android:text="@string/button_interactive"
        android:layout_height="match_parent"
        android:layout_width="match_parent" 
        android:id="@+id/makeInteractive"
        android:textColor="@color/black"
        android:background="@color/yellow" />
    </LinearLayout>
    

</LinearLayout>